*
* 1.2.12
*

- Support for MetaSystem UPS in UPS subagent
- Timed (temporary) alarm acknowledgement
- Management console:
   - Fixed bug with red zone display in "last value" dashboard element
   - Edit and delete for alarm comments are working now
   - Fixed Y axis range can be set for line and bar charts
- Android Agent:
	- Implemented "Connection notification" in status bar (feature #481)
	- Fix bug in resetting switch preference (settings) 
- Android Console:
	- Fix bug in resetting switch preference (settings) 
	- Implemented "Entire network" root (feature #482)
	- Manage last alarm from status bar: acknowledge, resolve, terminate (only for Android >= 4.1)
- Fixed issues: #79, #88, #393, #481, #482, #483, #486, #487


*
* 1.2.11
*

- Thresholds can be defined as NXSL scripts
- XMPP messaging support
- "Do not save collected data to database" option for data collection items
- Added "follow" option to "download file" object tools
- New attribute "driver" for NXSL class "Node"
- Management console:
	- Stacked line charts implemented
	- Authentication by certificates supported by Java console
	- Russian translation improved
- Fixed issues: #16, #76, #385, #464, #469, #472


*
* 1.2.10
*

- Event processing policy rules can be exported and imported
- NXSL:
	- Implemented post-increment and post-decrement for array elements
	- New functions: GetDCIValues
- Server's ICMP ping timeout can be configured
- DB/2 monitoring subagent
- DB/2 supported as backend database
- Table DCIs can be used in condition objects
- nxapush can push data on behalf of other nodes
- Transformation script can be run on aggregated DCIs
- Unknown SNMP trap sources can be automatically added as nodes
- Syslog processing optinmized for performance
- Default shared secret for agents can be configured
- Driver for Ping3 devices
- Driver for Allied Telesis switches
- Agent installer on Windows automatically adds firewall exception
- Database migration tool